Fix multiple placeholders without index issues

--- a/po/R-es.po
+++ b/po/R-es.po
@@ -51,11 +51,11 @@ msgstr ""
 msgid "Posterior Estimates per Model"
 msgstr "Estimaciones posteriores por Modelo"
 
-msgid "BF%s%s"
-msgstr "FB%s%s"
+msgid "BF%1$s%2$s"
+msgstr "FB%1$s%2$s"
 
-msgid "Log(BF%s%s)"
-msgstr "Log(FB%s%s)"
+msgid "Log(BF%1$s%2$s)"
+msgstr "Log(FB%1$s%2$s)"
 
 msgid "Mean"
 msgstr "Media"
@@ -85,10 +85,10 @@ msgid "Ordered effects"
 msgstr "Efectos ordenados"
 
 msgid ""
-"%s and %s are the group-level effect size and standard deviation, "
+"%1$s and %2$s are the group-level effect size and standard deviation, "
 "respectively."
 msgstr ""
-"%s y %s son la magnitud del efecto del nivel de grupo y la desviación "
+"%1$s y %2$s son la magnitud del efecto del nivel de grupo y la desviación "
 "típica, respectivamente."
 
 msgid "%s is the group-level effect size."
@@ -436,8 +436,8 @@ msgstr "Distancia de Cook"
 msgid "Cov. Ratio"
 msgstr "Ratio de Cov"
 
-msgid "%s%s<sub>(-i)</sub>"
-msgstr "%s%s<sub>(-i)</sub>"
+msgid "%1$s%2$s<sub>(-i)</sub>"
+msgstr "%1$s%2$s<sub>(-i)</sub>"
 
 msgid "Q<sub>E(-i)</sub>"
 msgstr "Q<sub>E(-i)</sub>"
@@ -502,8 +502,8 @@ msgstr "Gráfico"
 msgid "Funnel Plot"
 msgstr "Gráfico de Embudo"
 
-msgid "Log-Likelihood for %s%s"
-msgstr "Log-Verosimilitud para %s%s"
+msgid "Log-Likelihood for %1$s%2$s"
+msgstr "Log-Verosimilitud para %1$s%2$s"
 
 msgid "Trim-Fill Analysis"
 msgstr "Análisis Recortar-Llenar"
@@ -858,8 +858,8 @@ msgstr "Estimaciones del Modelo"
 msgid "Model %i"
 msgstr "Modelo %i"
 
-msgid "Model %i does not exist. Select one of the models between 1 and %i."
-msgstr "El modelo %i no existe. Selecciona uno de los modelos entre 1 y %i."
+msgid "Model %1$i does not exist. Select one of the models between 1 and %2$i."
+msgstr "El modelo %1$i no existe. Selecciona uno de los modelos entre 1 y %2$i."
 
 msgid "Estimated Weights (%s)"
 msgstr "Ponderaciones Estimadas (%s)"
@@ -979,8 +979,8 @@ msgstr "Intervalo con el 95%% de Confianza"
 msgid "Note:"
 msgstr "Nota:"
 
-msgid "%s is on %s scale."
-msgstr "%s está en la escala %s."
+msgid "%1$s is on %2$s scale."
+msgstr "%1$s está en la escala %2$s."
 
 msgid "<em>p</em>-values interval(one-sided)"
 msgstr "intervalo de valores <em>p</em> (unilateral)"
