--- a/po/R-nl.po
+++ b/po/R-nl.po
@@ -50,11 +50,11 @@ msgstr ""
 msgid "Posterior Estimates per Model"
 msgstr "Posterior schattingen per model"
 
-msgid "BF%s%s"
-msgstr "BF%s%s"
+msgid "BF%1$s%2$s"
+msgstr "BF%1$s%2$s"
 
-msgid "Log(BF%s%s)"
-msgstr "Log(BF%s%s)"
+msgid "Log(BF%1$s%2$s)"
+msgstr "Log(BF%1$s%2$s)"
 
 msgid "Mean"
 msgstr "Gemiddelde"
@@ -84,10 +84,10 @@ msgid "Ordered effects"
 msgstr "Geordende effecten"
 
 msgid ""
-"%s and %s are the group-level effect size and standard deviation, "
+"%1$s and %2$s are the group-level effect size and standard deviation, "
 "respectively."
 msgstr ""
-"%s en %s zijn de groepsniveau effectgrootte en standaardafwijking, "
+"%1$s en %2$s zijn de groepsniveau effectgrootte en standaardafwijking, "
 "respectievelijk."
 
 msgid "%s is the group-level effect size."
@@ -431,8 +431,8 @@ msgstr "Cook's Afstand"
 msgid "Cov. Ratio"
 msgstr "Cov. Ratio"
 
-msgid "%s%s<sub>(-i)</sub>"
-msgstr "%s%s<sub>(-i)</sub>"
+msgid "%1$s%2$s<sub>(-i)</sub>"
+msgstr "%1$s%2$s<sub>(-i)</sub>"
 
 msgid "Q<sub>E(-i)</sub>"
 msgstr "Q<sub>E(-i)</sub>"
@@ -497,8 +497,8 @@ msgstr "Grafiek"
 msgid "Funnel Plot"
 msgstr "Funnelgrafiek"
 
-msgid "Log-Likelihood for %s%s"
-msgstr "Log-likelihood voor %s%s"
+msgid "Log-Likelihood for %1$s%2$s"
+msgstr "Log-likelihood voor %1$s%2$s"
 
 msgid "Trim-Fill Analysis"
 msgstr "Trim-fill Analyse"
@@ -851,8 +851,8 @@ msgstr "Model Schattingen"
 msgid "Model %i"
 msgstr "Model %i"
 
-msgid "Model %i does not exist. Select one of the models between 1 and %i."
-msgstr "Model %i bestaat niet. Selecteer een model tussen 1 en %i."
+msgid "Model %2$i does not exist. Select one of the models between 1 and %2$i."
+msgstr "Model %2$i bestaat niet. Selecteer een model tussen 1 en %2$i."
 
 msgid "Estimated Weights (%s)"
 msgstr "Geschatte Gewichten (%s)"
@@ -971,8 +971,8 @@ msgstr "95%% Betrouwbaarheidsinterval"
 msgid "Note:"
 msgstr "Opmerking:"
 
-msgid "%s is on %s scale."
-msgstr "%s is op %s schaal."
+msgid "%1$s is on %2$s scale."
+msgstr "%1$s is op %2$s schaal."
 
 msgid "<em>p</em>-values interval(one-sided)"
 msgstr "<em>p</em>-waarden interval(eenzijdig)"
