--- a/po/R-ru.po
+++ b/po/R-ru.po
@@ -39,10 +39,10 @@ msgstr ""
 msgid "Posterior Estimates per Model"
 msgstr ""
 
-msgid "BF%s%s"
+msgid "BF%1$s%2$s"
 msgstr ""
 
-msgid "Log(BF%s%s)"
+msgid "Log(BF%1$s%2$s)"
 msgstr ""
 
 msgid "Mean"
@@ -72,7 +72,7 @@ msgstr ""
 msgid "Ordered effects"
 msgstr ""
 
-msgid "%s and %s are the group-level effect size and standard deviation, respectively."
+msgid "%1$s and %2$s are the group-level effect size and standard deviation, respectively."
 msgstr ""
 
 msgid "%s is the group-level effect size."
@@ -351,7 +351,7 @@ msgstr ""
 msgid "Cov. Ratio"
 msgstr ""
 
-msgid "%s%s<sub>(-i)</sub>"
+msgid "%1$s%2$s<sub>(-i)</sub>"
 msgstr ""
 
 msgid "Q<sub>E(-i)</sub>"
@@ -417,7 +417,7 @@ msgstr ""
 msgid "Funnel Plot"
 msgstr ""
 
-msgid "Log-Likelihood for %s%s"
+msgid "Log-Likelihood for %1$s%2$s"
 msgstr ""
 
 msgid "Trim-Fill Analysis"
@@ -744,7 +744,7 @@ msgstr ""
 msgid "Model %i"
 msgstr ""
 
-msgid "Model %i does not exist. Select one of the models between 1 and %i."
+msgid "Model %2$i does not exist. Select one of the models between 1 and %2$i."
 msgstr ""
 
 msgid "Estimated Weights (%s)"
@@ -852,7 +852,7 @@ msgstr ""
 msgid "Note:"
 msgstr ""
 
-msgid "%s is on %s scale."
+msgid "%1$s is on %2$s scale."
 msgstr ""
 
 msgid "<em>p</em>-values interval(one-sided)"
