--- a/po/R-ja.po
+++ b/po/R-ja.po
@@ -1056,7 +1056,7 @@ msgstr "イベントの合計数"
 msgid ""
 "Cannot compute outcomes. Chech that all of the required information is "
 "specified via the appropriate arguments (i.e. an Effect Size and either "
-"Standard Error, Sampling Variance, or 95% Confidence Interval)."
+"Standard Error, Sampling Variance, or 95%% Confidence Interval)."
 msgstr ""
 
 msgid "Step"
