--- a/po/R-jaspMetaAnalysis.pot
+++ b/po/R-jaspMetaAnalysis.pot
@@ -902,7 +902,7 @@ msgstr ""
 msgid "Total events"
 msgstr ""
 
-msgid "Cannot compute outcomes. Chech that all of the required information is specified via the appropriate arguments (i.e. an Effect Size and either Standard Error, Sampling Variance, or 95% Confidence Interval)."
+msgid "Cannot compute outcomes. Chech that all of the required information is specified via the appropriate arguments (i.e. an Effect Size and either Standard Error, Sampling Variance, or 95%% Confidence Interval)."
 msgstr ""
 
 msgid "Step"
