--- a/po/QML-pt_BR.po
+++ b/po/QML-pt_BR.po
@@ -3882,7 +3882,7 @@ msgid ""
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisBubblePlot|"
-msgid "Condifence intervals"
+msgid "Confidence intervals"
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisBubblePlot|"
