--- a/po/QML-id.po
+++ b/po/QML-id.po
@@ -3956,7 +3956,7 @@ msgid ""
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisBubblePlot|"
-msgid "Condifence intervals"
+msgid "Confidence intervals"
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisBubblePlot|"
