--- a/po/QML-ja.po
+++ b/po/QML-ja.po
@@ -4022,7 +4022,7 @@ msgid ""
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisBubblePlot|"
-msgid "Condifence intervals"
+msgid "Confidence intervals"
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisBubblePlot|"
