--- a/po/QML-tr.po
+++ b/po/QML-tr.po
@@ -3912,7 +3912,7 @@ msgid ""
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisBubblePlot|"
-msgid "Condifence intervals"
+msgid "Confidence intervals"
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisBubblePlot|"
