--- a/po/QML-id.po
+++ b/po/QML-id.po
@@ -4037,7 +4037,7 @@ msgid ""
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisDiagnostics|"
-msgid "Variace inflation factor"
+msgid "Variance inflation factor"
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisDiagnostics|"
