--- a/po/QML-de.po
+++ b/po/QML-de.po
@@ -4094,7 +4094,7 @@ msgid ""
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisDiagnostics|"
-msgid "Variace inflation factor"
+msgid "Variance inflation factor"
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisDiagnostics|"
