--- a/po/QML-pl.po
+++ b/po/QML-pl.po
@@ -4062,7 +4062,7 @@ msgid ""
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisDiagnostics|"
-msgid "Variace inflation factor"
+msgid "Variance inflation factor"
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisDiagnostics|"
