--- a/po/QML-pt.po
+++ b/po/QML-pt.po
@@ -3994,7 +3994,7 @@ msgid ""
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisDiagnostics|"
-msgid "Variace inflation factor"
+msgid "Variance inflation factor"
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisDiagnostics|"
