--- a/po/R-pt.po
+++ b/po/R-pt.po
@@ -37,7 +37,7 @@ msgstr "Não foram encontrados números negativos em %s"
 
 msgid "The 95%% CI Lower Bound must be smaller than the Upper Bound."
 msgstr ""
-"O Limite inferior do IC 95 % deve ser inferior do que o Limite Superior."
+"O Limite inferior do IC 95%% deve ser inferior do que o Limite Superior."
 
 msgid "You cannot set all the prior model probabilties to zero."
 msgstr ""
@@ -215,14 +215,14 @@ msgid ""
 "Posterior mean and 95%% credible interval estimates from the random effects "
 "model."
 msgstr ""
-"Estimativas de média posterior e intervalo credível de 95 % do modelo de "
+"Estimativas de média posterior e intervalo credível de 95%% do modelo de "
 "efeitos aleatórios."
 
 msgid ""
 "Posterior mean and 95%% credible interval estimates from the constrained "
 "random effects model."
 msgstr ""
-"Estimativas de média posterior e intervalo credível de 95 % do modelo de "
+"Estimativas de média posterior e intervalo credível de 95%% do modelo de "
 "efeitos aleatórios restrito."
 
 msgid "Effect Size"
