--- a/po/R-ta.po
+++ b/po/R-ta.po
@@ -596,7 +596,7 @@ msgid "No influential cases found."
 msgstr "செல்வாக்குமிக்க வழக்குகள் எதுவும் கிடைக்கவில்லை."
 
 msgid "%1$sNo influential cases found."
-msgstr "%1 $ ச்னோ செல்வாக்குமிக்க வழக்குகள் காணப்படுகின்றன."
+msgstr "%1$s ச்னோ செல்வாக்குமிக்க வழக்குகள் காணப்படுகின்றன."
 
 msgid "Diagnostics are based on the the subgroup models."
 msgstr "நோயறிதல் துணைக்குழு மாதிரிகளை அடிப்படையாகக் கொண்டது."
@@ -1007,7 +1007,7 @@ msgid ""
 "model. Possible causes are missing values, collinear predictors, or missing "
 "crossed cells in an interaction term."
 msgstr ""
-"%1$sthe கால%2$s மாதிரியிலிருந்து பார்ட்டிலி அகற்றப்பட்டது (%3 $ i/%4 $ i குணகங்கள்). "
+"%1$sthe கால%2$s மாதிரியிலிருந்து பார்ட்டிலி அகற்றப்பட்டது (%3$i/%4$i குணகங்கள்). "
 "சாத்தியமான காரணங்கள் மதிப்புகள், கோலைனியர் முன்னறிவிப்பாளர்கள் அல்லது ஒரு தொடர்பு "
 "காலங்களில் குறுக்குவெட்டு செல்களைக் காணவில்லை."
 
@@ -1491,7 +1491,7 @@ msgid "The method is not available with only one observation."
 msgstr "ஒரே ஒரு கண்காணிப்புடன் முறை கிடைக்கவில்லை."
 
 msgid "The %1$s fail-safe N calculation %2$sfailed with the following error:"
-msgstr "%1$s தோல்வி-பாதுகாப்பான n கணக்கீடு %2 $ பின்வரும் பிழையுடன் sfailed:"
+msgstr "%1$s தோல்வி-பாதுகாப்பான n கணக்கீடு %2$s பின்வரும் பிழையுடன் sfailed:"
 
 msgid ""
 "The 'Correlation/Covariance Matrix' variable input contains the following "
@@ -1642,7 +1642,7 @@ msgid ""
 "or 'Adapt delta' in the Options section."
 msgstr ""
 "அனுமானம் நம்பமுடியாதது - எம்.சி.எம்.சி சங்கிலிகள் ஒன்றிணைந்திருக்காது; மிகப்பெரிய R-"
-"HAT 1$.3f > 1.01 ஆகும். R-HAT ஐக் குறைக்க தயவுசெய்து 'மறு செய்கைகளை' அதிகரிக்கவும் "
+"HAT %1$.3f > 1.01 ஆகும். R-HAT ஐக் குறைக்க தயவுசெய்து 'மறு செய்கைகளை' அதிகரிக்கவும் "
 "அல்லது விருப்பங்கள் பிரிவில் 'டெல்டாவை மாற்றியமைக்கவும்'."
 
 msgid ""
