Update R-eu.po (#389)
* Update R-eu.po

* Don't translate empty space

* Don't translate empty spaces

--- a/po/R-eu.po
+++ b/po/R-eu.po
@@ -32,7 +32,7 @@ msgid "No negative numbers found in %s"
 msgstr "Ez da zenbaki negatiborik aurkitu %s-n"
 
 msgid "The 95%% CI Lower Bound must be smaller than the Upper Bound."
-msgstr "% 95eko CI beheko muga goiko muga baino txikiagoa izan behar da."
+msgstr "%%95eko CI beheko muga goiko muga baino txikiagoa izan behar da."
 
 msgid "You cannot set all the prior model probabilties to zero."
 msgstr "Ezin dituzu aurreko ereduaren probabilitate guztiak zero gisa ezarri."
@@ -67,7 +67,7 @@ msgid "Lower"
 msgstr "Beheko"
 
 msgid "95%% Credible Interval"
-msgstr "%95eko sinesgarritasun tartea"
+msgstr "%%95eko sinesgarritasun tartea"
 
 msgid "Upper"
 msgstr "Goiko"
@@ -183,7 +183,7 @@ msgid "Posterior"
 msgstr "Atzekoa"
 
 msgid "Fixed H%s"
-msgstr "H% finkoak"
+msgstr "H%s finkoak"
 
 msgid "Random H%s"
 msgstr "Ausazko H%s"
@@ -207,15 +207,15 @@ msgid ""
 "Posterior mean and 95%% credible interval estimates from the random effects "
 "model."
 msgstr ""
-"Ausazko efektuen eredutik ateratako atzeko batez bestekoaren eta % 95eko "
+"Ausazko efektuen eredutik ateratako atzeko batez bestekoaren eta %%95eko "
 "sinesgarritasun-tarteko estimazioak."
 
 msgid ""
 "Posterior mean and 95%% credible interval estimates from the constrained "
 "random effects model."
 msgstr ""
-"Ausazko efektu mugatuen eredutik ateratako atzeko batez bestekoaren eta % "
-"95eko sinesgarritasun tartearen estimazioak."
+"Ausazko efektu mugatuen eredutik ateratako atzeko batez bestekoaren eta "
+"%%95eko sinesgarritasun tartearen estimazioak."
 
 msgid "Effect Size"
 msgstr "Efektuaren tamaina"
@@ -1341,7 +1341,7 @@ msgid ""
 msgstr ""
 "Ezin dira emaitzak kalkulatu. Egiaztatu beharrezko informazio guztia "
 "argumentu egokien bidez zehaztuta dagoela (hau da, Efektuaren Tamaina eta "
-"Errore Estandarra, Laginketa Bariantza edo %95eko Konfiantza Tartea)."
+"Errore Estandarra, Laginketa Bariantza edo %%95eko Konfiantza Tartea)."
 
 msgid "Step"
 msgstr "Urratsa"
@@ -1432,10 +1432,10 @@ msgid "Estimate μ"
 msgstr "Estimatu μ"
 
 msgid "Lower 95%% CI"
-msgstr "%95eko CI baxuagoa"
+msgstr "%%95eko CI baxuagoa"
 
 msgid "Upper 95%% CI"
-msgstr "Goiko %95eko CI"
+msgstr "Goiko %%95eko CI"
 
 msgid "Estimate 𝜏"
 msgstr "Estimatu 𝜏"
@@ -1581,7 +1581,7 @@ msgid "Column"
 msgstr "Zutabea"
 
 msgid "95%% CI"
-msgstr "%95eko CI"
+msgstr "%%95eko CI"
 
 msgid "Computing additional fit measures: %1$s"
 msgstr "Gehigarrizko doikuntza neurriak kalkulatzen: %1$s"
@@ -1963,7 +1963,7 @@ msgid "All p-value cutoffs needs to be between 0 and 1."
 msgstr "p-balioaren muga guztiak 0 eta 1 artean egon behar dira."
 
 msgid "95%% Confidence Interval"
-msgstr "%95eko konfiantza-tartea"
+msgstr "%%95eko konfiantza-tartea"
 
 msgid "Note:"
 msgstr "Oharra:"
@@ -2163,10 +2163,10 @@ msgid ""
 "(power > 80%%)."
 msgstr ""
 "WAAP ez zen kalkulatu: %1$i ikerketa behar bezala potentziatu baino ez "
-"zeuden (potentzia > %80)."
+"zeuden (potentzia > %%80)."
 
 msgid "There were %1$i adequately powered studies (power > 80%%)."
-msgstr "Behar bezalako potentzia zuten %1$i ikerketa zeuden (potentzia > %80)."
+msgstr "Behar bezalako potentzia zuten %1$i ikerketa zeuden (potentzia > %%80)."
 
 msgid ""
 "The Hamiltonian Monte Carlo procedure might be invalid -- There was %i "
