--- a/po/QML-eu.po
+++ b/po/QML-eu.po
@@ -4567,7 +4567,7 @@ msgctxt "ClassicalMetaAnalysisMultilevelMultivariate|"
 msgid ""
 "Variable specifying the time point of the effect size measurement. In case "
 "multiple time points are specified, the first time corresponds to the first "
-"codntion."
+"condition."
 msgstr ""
 "Efektuaren tamainaren neurketaren denbora-puntua zehazten duen aldagaia. "
 "Denbora-puntu bat baino gehiago zehazten badira, lehenengo denbora lehenengo "
