--- a/po/QML-es.po
+++ b/po/QML-es.po
@@ -4566,7 +4566,7 @@ msgctxt "ClassicalMetaAnalysisMultilevelMultivariate|"
 msgid ""
 "Variable specifying the time point of the effect size measurement. In case "
 "multiple time points are specified, the first time corresponds to the first "
-"codntion."
+"condition."
 msgstr ""
 "Variable que indica el punto temporal de la medida de la magnitud del "
 "efecto. En caso de indicarse múltiples puntos temporales, el primer momento "
