--- a/po/QML-gl.po
+++ b/po/QML-gl.po
@@ -4550,7 +4550,7 @@ msgctxt "ClassicalMetaAnalysisMultilevelMultivariate|"
 msgid ""
 "Variable specifying the time point of the effect size measurement. In case "
 "multiple time points are specified, the first time corresponds to the first "
-"codntion."
+"condition."
 msgstr ""
 "Variable que indica o punto temporal da medida da magnitude do efecto. No "
 "caso de indicarse múltiples puntos temporais, o primeiro momento se "
