--- a/po/QML-ru.po
+++ b/po/QML-ru.po
@@ -4193,7 +4193,7 @@ msgctxt "ClassicalMetaAnalysisMultilevelMultivariate|"
 msgid ""
 "Variable specifying the time point of the effect size measurement. In case "
 "multiple time points are specified, the first time corresponds to the first "
-"codntion."
+"condition."
 msgstr ""
 
 msgctxt "ClassicalMetaAnalysisMultilevelMultivariate|"
